EKS/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: fastapi-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-prod
  template:
    metadata:
      labels:
        app: fastapi-prod
    spec:
      containers:
      - name: my-container
        image: 753978830035.dkr.ecr.us-east-1.amazonaws.com/fastapideemo:8.0
        ports:
        - containerPort: 8000
