EKS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: ec2-3-88-26-245.compute-1.amazonaws.com
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8000
